phpMyFAQ 2.9.2
Codename "Proteus"

CHANGELOG

This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.9.2 - 2016-06-
-

Version 2.9.1 - 2016-05-31
- fixed stored XSS vulnerability (Kacper Szurek)
- added new source code paste plugin (Thorsten)
- removed American English translation (Thorsten)
- updated bundled TinyMCE to version 4.3.12 (Thorsten)
- updated bundled Typeahead.js to version 0.11.0 (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.0 - 2016-05-13
- ready for PHP 7 (Thorsten)
- changed PHP requirement to PHP 5.5+ and PHP 7 (Thorsten)
- added support for HHVM 3.4.2+ (Thorsten)
- added support for Elasticsearch (Thorsten)
- added new mobile first, touch-friendly default layout (Thorsten)
- added tag intersection based search (Tomer Weinberg, Thorsten)
- added support for Markdown (Jerry van Kooten, Thorsten)
- added permissions for guests (Thorsten)
- added support for multiple LDAP/AD servers (Bernhard Müller, Thorsten)
- added experimental support for LDAP dynamic user binding (Thorsten)
- added frontend dependency management using Bower (Thorsten)
- added possibility to delete all logged search terms (Thorsten)
- added support for MySQL sockets
- added configuration for enable/disable highlighting search terms (Thorsten)
- added configuration for enable/disable RSS feeds (Thorsten)
- added configuration to enable/disable gzip compression (Thorsten)
- added configuration for inactive, hidden categories (Thorsten)
- added configuration to disable registration (Thorsten)
- added configuration to allow anonymous downloads (Thorsten)
- added configuration to override user passwords by admin (Thorsten)
- added configuration to reset voting and visits (Thorsten)
- added configuration to disable smart answering (Thorsten)
- added tag management frontend (Thorsten)
- added full support for SQLite3 (Peter Kehl)
- added control for meta robots handling (Thorsten)