@@ -17,7 +17,7 @@ cp -r $cwd/vendor/guzzlehttp/ringphp/src/* $cwd/phpmyfaq/inc/libs/guzzlehttp/rin
 cp -r $cwd/vendor/monolog/monolog/src/Monolog/* $cwd/phpmyfaq/inc/libs/monolog/src/Monolog
 cp -r $cwd/vendor/erusev/parsedown/Parsedown.php $cwd/phpmyfaq/inc/libs/parsedown/Parsedown.php
 cp -r $cwd/vendor/erusev/parsedown-extra/ParsedownExtra.php $cwd/phpmyfaq/inc/libs/parsedown/ParsedownExtra.php
-cp -r $cwd/vendor/phpseclib/phpseclib/Crypt $cwd/phpmyfaq/inc/libs/phpseclib
+cp -r $cwd/vendor/phpseclib/phpseclib/phpseclib/Crypt $cwd/phpmyfaq/inc/libs/phpseclib
 cp -r $cwd/vendor/psr/log/Psr/* $cwd/phpmyfaq/inc/libs/psr/log/Psr
 cp -R $cwd/vendor/react/promise/src/* $cwd/phpmyfaq/inc/libs/react/promise/src
 cp -r $cwd/vendor/swiftmailer/swiftmailer/lib/* $cwd/phpmyfaq/inc/libs/swiftmailer
@@ -29,7 +29,7 @@ mkdir -p $cwd/phpmyfaq/inc/libs/tcpdf
 mkdir -p $cwd/phpmyfaq/inc/libs/tcpdf/config
 mkdir -p $cwd/phpmyfaq/inc/libs/tcpdf/include
 
-cp $cwd/vendor/tecnick.com/tcpdf/*.php $cwd/phpmyfaq/inc/libs/tcpdf
+cp $cwd/vendor/tecnickcom/tcpdf/*.php $cwd/phpmyfaq/inc/libs/tcpdf
 
-cp -r $cwd/vendor/tecnick.com/tcpdf/config/*.php $cwd/phpmyfaq/inc/libs/tcpdf/config
-cp -r $cwd/vendor/tecnick.com/tcpdf/include/*.php $cwd/phpmyfaq/inc/libs/tcpdf/include
+cp -r $cwd/vendor/tecnickcom/tcpdf/config/*.php $cwd/phpmyfaq/inc/libs/tcpdf/config
+cp -r $cwd/vendor/tecnickcom/tcpdf/include/*.php $cwd/phpmyfaq/inc/libs/tcpdf/include
