@@ -6,7 +6,8 @@ CHANGELOG
 This is a log of major user-visible changes in each phpMyFAQ release.
 
 Version 2.9.2 - 2016-06-
--
+- updated bundled phpseclib to version 2.0.2 (Thorsten)
+- fixed minor bugs (Thorsten)
 
 Version 2.9.1 - 2016-05-31
 - fixed stored XSS vulnerability (Kacper Szurek)
